[ADD] button styles

--- a/dream-journal/src/index.css
+++ b/dream-journal/src/index.css
@@ -2,8 +2,12 @@
   --color-surface: hsl(0, 0%, 97%);
   --color-text: hsl(0, 0%, 15%);
   --color-primary: hsl(243, 100%, 69%);
+
+  --color-primary-text: hsl(0, 0%, 97%);
   --color-placeholder: hsl(243, 41%, 83%);
   --color-primary-outline: hsl(243, 100%, 69%);
+
+  --color-primary-focus: hsl(243, 67%, 59%);
 }
 
 *,
