--- a/dream-journal/src/components/search-box/search-box.module.css
+++ b/dream-journal/src/components/search-box/search-box.module.css
@@ -13,9 +13,10 @@
     flex: 1;
 
     font-weight: 500;
-    font-size: 1rem;
 
-    line-height: 1rem;
+    line-height: 1;
+
+    block-size: 1em;
 
     border: none;
 
