[ADD] dreams styles

--- a/dream-journal/src/index.css
+++ b/dream-journal/src/index.css
@@ -3,9 +3,13 @@
   --color-text: hsl(0, 0%, 15%);
   --color-primary: hsl(243, 100%, 69%);
 
+  --color-fade: hsl(0, 0%, 80%);
+  --color-danger: hsl(0, 100%, 45%);
+
   --color-primary-text: hsl(0, 0%, 97%);
   --color-placeholder: hsl(243, 41%, 83%);
-  --color-primary-outline: hsl(243, 100%, 69%);
+  --color-primary-border: hsl(243, 100%, 69%, 50%);
+  --color-primary-outline: hsl(243, 100%, 69%, 40%);
 
   --color-primary-focus: hsl(243, 67%, 59%);
 }
@@ -20,6 +24,9 @@
 }
 
 html {
+  accent-color: var(--color-primary);
+  caret-color: var(--color-primary);
+
   font-family: "Kanit", system-ui;
 }
 
