--- a/dream-journal/src/components/dreams/dreams.module.css
+++ b/dream-journal/src/components/dreams/dreams.module.css
@@ -2,11 +2,10 @@
   display: grid;
   gap: 1rem;
 
-  padding-block: 1rem;
-
-  margin-inline: auto;
-
   inline-size: min(32.5rem, 100%);
+
+  padding-block: 1rem;
+  margin-inline: auto;
 
   > li {
     display: flex;
@@ -14,8 +13,6 @@
     gap: 1rem;
 
     padding-block-end: 1rem;
-
-    border-block-end: 1px solid var(--color-primary-border);
 
     label {
       display: flex;
@@ -60,10 +57,13 @@
         }
       }
     }
-  }
-  &:hover {
-    .actions {
-      opacity: 1;
+    &:hover {
+      .actions {
+        opacity: 1;
+      }
+    }
+    &:not(:last-child) {
+      border-block-end: 1px solid var(--color-primary-border);
     }
   }
 }
