--- a/dream-journal/src/index.css
+++ b/dream-journal/src/index.css
@@ -3,6 +3,7 @@
   --color-text: hsl(0, 0%, 15%);
   --color-primary: hsl(243, 100%, 69%);
 
+  --color-backdrop: hsl(0, 0%, 15%, 70%);
   --color-fade: hsl(0, 0%, 80%);
   --color-danger: hsl(0, 100%, 45%);
 
