--- a/dream-journal/src/components/footer/footer.module.css
+++ b/dream-journal/src/components/footer/footer.module.css
@@ -4,4 +4,33 @@
     inset-block-end: 2rem;
     inset-inline-end: max(1rem, (100% - 45rem) / 2);
   }
+
+  dialog {
+    inline-size: 30rem;
+
+    margin: auto;
+    padding: 1rem 2rem;
+
+    background-color: var(--color-surface);
+
+    border: none;
+    border-radius: 1rem;
+
+    &::backdrop {
+      background-color: var(--color-backdrop);
+      backdrop-filter: blur(2px);
+    }
+
+    .content {
+      text-transform: uppercase;
+      .title {
+        margin-block-end: 1.5rem;
+
+        font-size: 1.5rem;
+        font-weight: 500;
+
+        text-align: center;
+      }
+    }
+  }
 }
