--- a/dream-journal/src/components/toolbar/toolbar.module.css
+++ b/dream-journal/src/components/toolbar/toolbar.module.css
@@ -7,4 +7,12 @@
   :first-child {
     flex: 1;
   }
+
+  .icon {
+    width: 21;
+    height: 21;
+
+    color: var(--color-primary);
+    stroke-width: 1;
+  }
 }
