--- a/dream-journal/src/components/footer/footer.module.css
+++ b/dream-journal/src/components/footer/footer.module.css
@@ -31,6 +31,13 @@
 
         text-align: center;
       }
+
+      .action {
+        display: flex;
+        justify-content: space-between;
+
+        margin-block-start: 8rem;
+      }
     }
   }
 }
