[UPDATE] toolbar component and css

--- a/dream-journal/src/components/toolbar/toolbar.module.css
+++ b/dream-journal/src/components/toolbar/toolbar.module.css
@@ -8,11 +8,9 @@
     flex: 1;
   }
 
-  .icon {
-    width: 21;
-    height: 21;
-
+  .search-icon {
     color: var(--color-primary);
-    stroke-width: 1;
+
+    font-size: 1.375rem;
   }
 }
