[ADD] footer component and css

--- a/dream-journal/src/components/footer/footer.module.css
+++ b/dream-journal/src/components/footer/footer.module.css
@@ -3,6 +3,8 @@
     position: fixed;
     inset-block-end: 2rem;
     inset-inline-end: max(1rem, (100% - 45rem) / 2);
+
+    font-size: 2rem;
   }
 
   dialog {
