[UPDATE] dreams component and css

--- a/dream-journal/src/components/dreams/dreams.module.css
+++ b/dream-journal/src/components/dreams/dreams.module.css
@@ -37,6 +37,8 @@
       gap: 0.5rem;
 
       Button {
+        font-size: 1.125rem;
+
         background-color: transparent;
         color: var(--color-fade);
 
