[UPDATE] component button and type and css

--- a/dream-journal/src/components/button/button.module.css
+++ b/dream-journal/src/components/button/button.module.css
@@ -25,11 +25,19 @@
     }
   }
 
-  &.outline {
+  &.outlined {
     background-color: var(--color-primary-text);
     color: var(--color-primary);
 
     border: 1px solid var(--color-primary);
+  }
+
+  &.transparent {
+    background-color: transparent;
+
+    &:hover {
+      background-color: transparent;
+    }
   }
 
   &.rectangle {
