--- a/dream-journal/src/index.css
+++ b/dream-journal/src/index.css
@@ -1,68 +1,52 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  --color-surface: hsl(0, 0%, 97%);
+  --color-text: hsl(0, 0%, 15%);
+  --color-primary: hsl(243, 100%, 69%);
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --color-backdrop: hsl(0, 0%, 15%, 70%);
+  --color-fade: hsl(0, 0%, 80%);
+  --color-danger: hsl(0, 100%, 45%);
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --color-primary-text: hsl(0, 0%, 97%);
+  --color-placeholder: hsl(243, 41%, 83%);
+  --color-primary-border: hsl(243, 100%, 69%, 50%);
+  --color-primary-outline: hsl(243, 100%, 69%, 40%);
+
+  --color-primary-focus: hsl(243, 67%, 59%);
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+
+  margin: 0;
+  padding: 0;
 }
-a:hover {
-  color: #535bf2;
+
+html {
+  accent-color: var(--color-primary);
+  caret-color: var(--color-primary);
+
+  font-family: "Kanit", system-ui;
+}
+
+input,
+label,
+select,
+textarea,
+button,
+fieldset,
+legend,
+datalist,
+output,
+option,
+optgroup {
+  font: inherit;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
+  inline-size: min(45rem, 100% - 2rem);
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  margin-inline: auto;
 }
