--- a/dream-journal/src/components/dreams/dreams.module.css
+++ b/dream-journal/src/components/dreams/dreams.module.css
@@ -9,27 +9,26 @@
 
   > li {
     display: flex;
-    justify-content: space-between;
-    gap: 1rem;
+    justify-content: baseline;
+    gap: 0.5rem;
 
     padding-block-end: 1rem;
 
-    label {
-      display: flex;
-      align-items: center;
-      gap: 1rem;
+    .title {
+      grid-area: title;
 
-      input {
-        inline-size: 1.75rem;
-        block-size: 1.75rem;
-      }
-
-      .title {
-        font-size: 1.25rem;
-        font-weight: 500;
-      }
+      font-size: 1.25rem;
+      font-weight: 500;
     }
 
+    .date {
+      grid-area: date;
+
+      font-family: monospace;
+      font-size: 1rem;
+      font-weight: 300;
+    }
+  
     .actions {
       opacity: 0;
 
@@ -37,6 +36,8 @@
       gap: 0.5rem;
 
       font-size: 1.125rem;
+
+      margin-inline-start: auto;
 
       & .edit {
          color: var(--color-fade);
