--- a/dream-journal/src/components/footer/footer.module.css
+++ b/dream-journal/src/components/footer/footer.module.css
@@ -25,9 +25,11 @@
 
     .content {
       text-transform: uppercase;
-      .title {
-        margin-block-end: 1.5rem;
 
+      display: grid;
+      gap: 1rem;
+
+      .title {
         font-size: 1.5rem;
         font-weight: 500;
 
@@ -38,7 +40,7 @@
         display: flex;
         justify-content: space-between;
 
-        margin-block-start: 8rem;
+        margin-block-start: 2rem;
       }
     }
   }
