--- a/dream-journal/src/components/button/button.module.css
+++ b/dream-journal/src/components/button/button.module.css
@@ -26,7 +26,7 @@
   }
 
   &.outlined {
-    background-color: var(--color-primary-text);
+    background-color: var(--color-surface);
     color: var(--color-primary);
 
     border: 1px solid var(--color-primary);
