--- a/dream-journal/src/index.css
+++ b/dream-journal/src/index.css
@@ -1,12 +1,13 @@
 :root {
-  --color-surface: hsl(0, 0%, 97%);
+  --color-surface: hsl(0, 0%, 95%);
+  --color-surface-elevated: hsl(0, 0%, 99%);
   --color-text: hsl(0, 0%, 15%);
-  --color-primary: hsl(243, 100%, 69%);
 
   --color-backdrop: hsl(0, 0%, 15%, 70%);
   --color-fade: hsl(0, 0%, 80%);
   --color-danger: hsl(0, 100%, 45%);
 
+  --color-primary: hsl(243, 100%, 69%);
   --color-primary-text: hsl(0, 0%, 97%);
   --color-placeholder: hsl(243, 41%, 83%);
   --color-primary-border: hsl(243, 100%, 69%, 50%);
