--- a/dream-journal/src/index.css
+++ b/dream-journal/src/index.css
@@ -15,6 +15,8 @@
 
   --color-primary-focus: hsl(243, 67%, 59%);
 
+  --box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+
   color-scheme: light;
 
   &[data-theme="dark"] {
