--- a/dream-journal/src/index.css
+++ b/dream-journal/src/index.css
@@ -1,18 +1,33 @@
 :root {
-  --color-surface: hsl(0, 0%, 97%);
+  --color-surface: hsl(0, 0%, 95%);
+  --color-surface-elevated: hsl(0, 0%, 99%);
   --color-text: hsl(0, 0%, 15%);
-  --color-primary: hsl(243, 100%, 69%);
 
   --color-backdrop: hsl(0, 0%, 15%, 70%);
   --color-fade: hsl(0, 0%, 80%);
   --color-danger: hsl(0, 100%, 45%);
 
+  --color-primary: hsl(243, 100%, 69%);
   --color-primary-text: hsl(0, 0%, 97%);
   --color-placeholder: hsl(243, 41%, 83%);
   --color-primary-border: hsl(243, 100%, 69%, 50%);
   --color-primary-outline: hsl(243, 100%, 69%, 40%);
 
   --color-primary-focus: hsl(243, 67%, 59%);
+
+  --box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+
+  color-scheme: light;
+
+  &[data-theme="dark"] {
+    --color-surface: hsl(0, 0%, 15%);
+    --color-surface-elevated: hsl(0, 0%, 16%);
+    --color-text: hsl(0, 0%, 97%);
+
+    --color-fade: hsl(0, 0%, 60%);
+
+    color-scheme: dark;
+  }
 }
 
 *,
@@ -46,6 +61,9 @@ optgroup {
 }
 
 body {
+  background-color: var(--color-surface);
+  color: var(--color-text);
+
   inline-size: min(45rem, 100% - 2rem);
 
   margin-inline: auto;
