[UPDATE] font-family

--- a/dream-journal/src/index.css
+++ b/dream-journal/src/index.css
@@ -43,7 +43,7 @@ html {
   accent-color: var(--color-primary);
   caret-color: var(--color-primary);
 
-  font-family: "Kanit", system-ui;
+  font-family: "Vazirmatn", system-ui;
 }
 
 input,
