--- a/whereaboutgo/src/index.css
+++ b/whereaboutgo/src/index.css
@@ -1,7 +1,18 @@
 :root {
+  color-scheme: light;
+
   --color-text: hsl(240, 9%, 22%);
   --color-primary: hsl(206, 84%, 38%);
   --color-primary-hover: hsl(206, 84%, 30%);
+
+  --color-rating: hsl(43, 96%, 56%);
+
+  --color-surface-elevated: hsl(0, 0%, 99%);
+
+  --color-border: hsl(244, 100%, 90%);
+  --color-border-primary: hsla(244, 100%, 90%, 0.5);
+
+  --color-box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
 }
 
 *,
