--- a/whereaboutgo/src/components/attraction-item/attraction-item.module.css
+++ b/whereaboutgo/src/components/attraction-item/attraction-item.module.css
@@ -1,8 +1,6 @@
 .attraction {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 12rem 1fr auto;
   gap: 1rem;
 
   background-color: var(--color-surface-elevated);
@@ -12,8 +10,6 @@
   padding: 1rem;
 
   .visuals {
-    inline-size: 100%;
-    block-size: 100%;
     img {
       block-size: 100%;
       inline-size: 100%;
@@ -25,22 +21,17 @@
   }
 
   .writings {
-    display: flex;
-    flex-direction: column;
-
     .title {
       font-size: var(--fz-500);
+      font-weight: 500;
+    }
+
+    .description {
+      font-size: var(--fz-400);
     }
   }
 
   .rating {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-
-    block-size: 100%;
-    inline-size: 100%;
-
     padding: 1rem;
 
     border: 1px solid var(--color-border-primary);
@@ -49,7 +40,7 @@
     .averageRating {
       display: flex;
       flex-direction: row;
-      justify-content: space-between;
+      gap: 0.5rem;
     }
 
     .ratingCount {
