--- a/whereaboutgo/src/components/attraction-item/attraction-item.module.css
+++ b/whereaboutgo/src/components/attraction-item/attraction-item.module.css
@@ -3,7 +3,7 @@
   grid-template-columns: 12rem 1fr auto;
   gap: 1rem;
 
-  background-color: var(--color-surface-elevated);
+  background-color: var(--color-surface-300);
   box-shadow: var(--color-box-shadow);
   border-radius: 0.5rem;
 
@@ -22,12 +22,22 @@
 
   .writings {
     .title {
-      font-size: var(--fz-500);
-      font-weight: 500;
+      color: var(--color-primary);
+
+      font-size: var(--fz-400);
+      font-weight: 700;
+
+      padding-bottom: 0.5rem;
     }
 
     .description {
-      font-size: var(--fz-400);
+      overflow: hidden;
+
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 3;
+
+      line-height: 1.75rem;
     }
   }
 
@@ -45,7 +55,7 @@
 
     .ratingCount {
       color: var(--color-primary);
-      font-size: var(--fz-200);
+      font-size: var(--fz-100);
     }
   }
 }
