--- a/whereaboutgo/src/components/attraction-item/attraction-item.module.css
+++ b/whereaboutgo/src/components/attraction-item/attraction-item.module.css
@@ -9,6 +9,8 @@
 
   padding: 1rem;
 
+  max-width: 100%;
+
   .visuals {
     img {
       block-size: 100%;
@@ -47,15 +49,44 @@
     border: 1px solid var(--color-border-primary);
     border-radius: 0.5rem;
 
+    width: 12rem;
+    height: 8rem;
+
+    align-items: center;
+
     .averageRating {
       display: flex;
-      flex-direction: row;
       gap: 0.5rem;
     }
 
     .ratingCount {
       color: var(--color-primary);
       font-size: var(--fz-100);
+    }
+  }
+
+  .tags {
+    grid-column: 1 / -1;
+
+    display: flex;
+    align-self: self-start;
+
+    flex-wrap: wrap;
+    gap: 0.5rem;
+
+    width: 100%;
+
+    > li {
+      background-color: var(--color-surface-300);
+      color: var(--color-primary);
+
+      box-shadow: var(--color-box-shadow);
+
+      padding: 0.25rem 0.5rem;
+
+      border-radius: 999rem;
+
+      font-size: var(--fz-300);
     }
   }
 }
