--- a/movie-box/src/index.css
+++ b/movie-box/src/index.css
@@ -12,6 +12,7 @@
   --color-surface-300: hsl(0, 0%, 99%);
   --color-surface-400: hsl(0, 0%, 97%);
 
+  --color-text-50: hsl(0, 0%, 97%);
   --color-text-300: hsl(0, 0%, 40%);
   --color-text-400: hsl(0, 0%, 10%);
 
